added meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,146 +1,161 @@
 <!DOCTYPE html>
+
 <html>
-  <head>
-    <title>Ezekiel</title>
-    <link rel="icon" href="https://jovian.com/"
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Playwrite+ES+Deco+Guides&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Playwrite+ES+Deco+Guides&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <!--HERO SECTION-->
-    <div id="hero-section">
-      <!--HERO TEXT PARTS-->
-      <div id="hero-text">
-        <!--EMAOILS & PHONE-->
-        <div class="smalltext">
-          +2347064642763
-          <div id="emails">
-joshuaezekiel509@gmail.com
-          </div>
+
+<head>
+  <title>Ezekiel</title>
+  <meta name="robbot" content="index, follow">
+  <meta name="og: title" content="Ezekiel Web-site designer">
+  <meta property="og:description" content="what i offer to thr world">
+  <meta property="og:imsage" content="jovian_meta.png">
+  <meta name="twitter:title" content="Ezekiel career">
+  <meta name="twitter:description" content="my service">
+  <link rel="icon" href="httpshttps://jovian.com/jovian_logo.svg://jovian.com/" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Playwrite+ES+Deco+Guides&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Playwrite+ES+Deco+Guides&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <!--HERO SECTION-->
+  <div id="hero-section">
+    <!--HERO TEXT PARTS-->
+    <div id="hero-text">
+      <!--EMAOILS & PHONE-->
+      <div class="smalltext">
+        +2347064642763
+        <div id="emails">
+          joshuaezekiel509@gmail.com
         </div>
-          
+      </div>
+
       <!--NAME-->
       <div id="hi">
-                Hi, I'M Joshua Ezekiel
+        Hi, I'M Joshua Ezekiel
       </div>
       <!--TITTLE-->
       <h1>Freelance Front-end Developer</h1>
       </di>
       <!--SUBTITLE-->
       <div class="bigtext">
-Hi, I'm Joshua Ezekiel, a skilled freelance front-end developer dedicated to crafting exceptional user experiences. With expertise in HTML, CSS, JavaScript, and modern frameworks like React and Angular, I bring innovative solutions to clients worldwide. Let's collaborate and bring your vision to life!"
+        Hi, I'm Joshua Ezekiel, a skilled freelance front-end developer dedicated to crafting exceptional user
+        experiences. With expertise in HTML, CSS, JavaScript, and modern frameworks like React and Angular, I bring
+        innovative solutions to clients worldwide. Let's collaborate and bring your vision to life!"
       </div>
       <!--BUTTOM-->
       <div>
-<button id="buttom">Contact Me</button>
-      </div>
-</div>
-      <!--HERO IMAGE-->
-      <div id="hero-image-wrapper">
-        <img  id="hero-image" src="avata.jpg" height="400px">
+        <button id="buttom">Contact Me</button>
       </div>
     </div>
-    <!--
+    <!--HERO IMAGE-->
+    <div id="hero-image-wrapper">
+      <img id="hero-image" src="avata.jpg" height="400px">
+    </div>
+  </div>
+  <!--
     <div>
       What I DO
       <h2>With 4+ years of development and designer exprience</h2>
     </div>
   -->
-    <!--
+  <!--
     <div>Project</div>
   -->
-    <div id="pricing-section">
+  <div id="pricing-section">
+  </div>
+  <div class="overtitle">Pricing</div>
+
+  <h2 class="section-heading"> You can take a look at the pricing table based on the work i do</h2>
+  <div class="bigtext section-subtitle">Transform your digital presence with our cutting-edge frontend solutions!
+    Elevate your brand experience through intuitive, responsive, and scalable interfaces that captivate and engage your
+    audience</div>
+  <div id="pricing-boxes">
+    <div class="pricing-boxing">
+      <div class="pricing-card">
+        <div class="service">
+          PSD to HTML
+        </div>
+        <div class="pricing">
+          $99<span class="page">/page</span>
+
+        </div>
+        <ul class="discription">
+          <li>✅reponsive design</li>
+          <li>✅Engaging Interfaces</li>
+          <li>✅Improve visibilities</li>
+        </ul>
+        <div class="benefit">
+
+        </div>
+        <div class="buttom">
+          <button class="buttom">Comtact Me</button>
+        </div>
       </div>
-      <div class="overtitle">Pricing</div>
+    </div>
+    <div class="pricing-boxing">
+      <div class="service1">
+        <div class="pricing-card-2">
+          <div class="service">
+            sketch to HTMl
+          </div>
+          <div class="pricing">
+            $99<span class="page">/page</span>
+          </div>
+          <div>
+            <ul class="discription-2">
+              <li>✅reponsive design</li>
+              <li>✅Engaging interfaces</li>
+              <li>✅Improve visibilities</li>
+            </ul>
+          </div>
 
-  <h2 class="section-heading" > You can take a look at the pricing table based on the work i do</h2>    
-   <div class="bigtext section-subtitle">Transform your digital presence with our cutting-edge frontend solutions! Elevate your brand experience through intuitive, responsive, and scalable interfaces that captivate and engage your audience</div> 
-<div id="pricing-boxes">
-  <div class="pricing-boxing">
-<div class="pricing-card">
-  <div class="service">
-PSD to HTML    
-</div>
-<div class="pricing">
-  $99<span class="page">/page</span>
+          <div class="buttom-2">
+            <button>Comtact Me</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="pricing-boxing">
+      <div class="pricing-card">
+        <div class="service">
+          figma to HTMl
+        </div>
+        <div class="pricing">
+          $99<span class="page">/Page </span>
+        </div>
+        <div class="">
+          <ul class="discription-2">
+            <li>✅reponsive design</li>
+            <li>✅Engaging interfaces</li>
+            <li>✅Improve visibilities</li>
+          </ul>
+          <div class="buttom">
+            <button>Comtact Me</button>
+          </div>
+        </div>
 
-</div>
-<ul class="discription">
-<li>✅reponsive design</li>
-  <li>✅Engaging Interfaces</li>
-  <li>✅Improve visibilities</li>
-</ul>
-<div class="benefit">
-
-</div>
-<div class="buttom">
-  <button class="buttom" >Comtact Me</button> 
-</div>
-</div>
-</div>
-<div class="pricing-boxing">
-  <div class="service1">
-  <div class="pricing-card-2">
- <div class="service">
-  sketch to HTMl
- </div>
- <div class="pricing">
-  $99<span class="page">/page</span>
-</div> 
-<div>
-  <ul class="discription-2">
-<li>✅reponsive design</li>
-  <li>✅Engaging interfaces</li>
-  <li>✅Improve visibilities</li>
-</ul>
-</div>
-
-<div class="buttom-2">
-  <button>Comtact Me</button> 
-</div>
-</div>
-</div>
-  </div>
-  <div class="pricing-boxing">
-  <div class="pricing-card">
- <div class="service">
-  figma to HTMl
- </div>
- <div class="pricing">
-  $99<span class="page">/Page </span>
-</div>
-<div class="">
-  <ul class="discription-2">
-<li>✅reponsive design</li>
-  <li>✅Engaging interfaces</li>
-  <li>✅Improve visibilities</li>
-</ul>
-<div class="buttom">
-  <button>Comtact Me</button> 
-</div>
-  </div>
-  
-</div>
-
-  </div>
-</div>
-</div>
-
-<div style="height: 50px;"></div>
-<!-- 
-    <div>Question</div>
-  -->
-    <div id="footer"> 
-Joshua Ezekiel © 2025 All right reserved 
+      </div>
 
     </div>
-  </body>
+  </div>
+  </div>
+
+  <div style="height: 50px;"></div>
+  <!-- 
+    <div>Question</div>
+  -->
+  <div id="footer">
+    Joshua Ezekiel © 2025 All right reserved
+
+  </div>
+</body>
+
 </html>
