added meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,18 @@
 <html>
   <head>
     <title>Ezekiel</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta name="author" content="Ezekiel">
+    <meta nane="roboto" content="index, follow">
+    <meta property="og:title" content="Ezekiel career">
+    <meta property="og:description" content="what i offer the world">
+    <meta property="og:image" content="jovian_logo.svg">
+    <meta name="twitter:title" content="Ezekiel career>
+    <meta name="twitrdescription" content="what i offer the worid">
+    <meta name="twitter:image" content="jovian_logo">
+    <link rel="icons" href="https://jovian.com/https://jovian.com/jovian_logo.svg" type="image/x-ico">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Playwrite+ES+Deco+Guides&display=swap"
       rel="stylesheet"
