--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ joshuaezekiel509@gmail.com
           
       <!--NAME-->
       <div id="hi">
-                Hi, I'M Joshua Ezekiel
+                Hi, I'M Biodun Ezekiel
       </div>
       <!--TITTLE-->
       <h1>Freelance Front-end Developer</h1>
