add biodun and ejoshua

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Biodun</title>
+    <title>Ezekiel</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +28,7 @@ joshuaezekiel509@gmail.com
           
       <!--NAME-->
       <div id="hi">
-                Hi, I'M Biodun Ezekiel
+                Hi, I'M Joshua Ezekiel
       </div>
       <!--TITTLE-->
       <h1>Freelance Front-end Developer</h1>
