--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
   <head>
-    <title>Ezekiel</title>
-    <link rel="icon" heref="https://jovian.com/jovian_logo.svg" type="image/x-icon">
+    <meta vcharset="UTF--8">
+  <meta name="viewport" content="width=device-width, initial-sccale=1,0">
+  <meta mame="description" content="the service we offer as a front-end developer">
+  <meta name="keywords" content="front-end developer">
+  <meta name="aurthot" content="Ezekiel">
+  <meta name="roboto" content="index, folow">
+  <meta property="og:title" content="the service we offer as a front-end developer">
+  <meta property="og:discription" content="the service we offer as a front-end developer">
+  <meta property="og:image" content="/jovian-logo.svg">
+  <meta name="twitter:title" content="Ezekiel Career">
+  <meta name="twitter:description" content="the service we offer as a front-end developer">
+  <meta property="twitter:image" content="/jovian_logo_svg">
+  <title>Ezekiel</title>
+      <link rel="icon" heref="https://jovian.com/jovian_logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
