--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
   <head>
-    <meta vcharset="UTF--8">
-  <meta name="viewport" content="width=device-width, initial-sccale=1,0">
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1,0">
   <meta mame="description" content="the service we offer as a front-end developer">
   <meta name="keywords" content="front-end developer">
-  <meta name="aurthot" content="Ezekiel">
-  <meta name="roboto" content="index, folow">
-  <meta property="og:title" content="the service we offer as a front-end developer">
+  <meta name="author" content="Ezekiel">
+  <meta name="roboto" content="index, folilow">
+  <meta property="og:title" content="Ezekiel Career">
   <meta property="og:discription" content="the service we offer as a front-end developer">
   <meta property="og:image" content="/jovian-logo.svg">
   <meta name="twitter:title" content="Ezekiel Career">
