--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
   <head>
-    <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1,0">
-  <meta mame="description" content="the service we offer as a front-end developer">
-  <meta name="keywords" content="front-end developer">
-  <meta name="author" content="Ezekiel">
-  <meta name="roboto" content="index, folilow">
+    <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1,0"/>
+  <meta mame="description" content="the service we offer as a front-end developer"/>
+  <meta name="keywords" content="front-end developer"/>
+  <meta name="author" content="Ezekiel"/>
+  <meta name="roboto" content="index, folilow"/>
   <meta property="og:title" content="Ezekiel Career">
-  <meta property="og:discription" content="the service we offer as a front-end developer">
-  <meta property="og:image" content="/jovian-logo.svg">
+  <meta property="og:discription" content="the service we offer as a front-end developer"/>
+  <meta property="og:image" content="/jovian-logo.svg"/>
   <meta name="twitter:title" content="Ezekiel Career">
-  <meta name="twitter:description" content="the service we offer as a front-end developer">
-  <meta property="twitter:image" content="/jovian_logo_svg">
+  <meta name="twitter:description" content="the service we offer as a front-end developer"/>
+  <meta property="twitter:image" content="/jovian_logo_svg"/>
   <title>Ezekiel</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
