--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Ezekiel Career">
   <meta property="og:discription" content="the service we offer as a front-end developer"/>
   <meta property="og:image" content="/jovian-logo.svg"/>
-  <meta name="twitter:title" content="Ezekiel Career">
+  <meta name="twitter:title" content="Ezekiel Career"/>
   <meta name="twitter:description" content="the service we offer as a front-end developer"/>
   <meta property="twitter:image" content="/jovian_logo_svg"/>
   <title>Ezekiel</title>
